added an about me section, a main image, and more styling

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="https://use.fontawesome.com/8f5e0c9388.js"></script> 
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand:300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+
 
 	<title>Portfolio Page</title>
 </head>
 <body>
-	 <nav class="navbar navbar-default navbar-fixed-top vertical-align">
+	 
+ 	<div class="main">
+ 		<nav class="navbar navbar-default navbar-fixed-top vertical-align">
 		<div class="container-fluid">
 		<a href="#home" class="navbar-link ">Home</a>
 		<a href="#about-me" class="navbar-link ">About</a>
@@ -16,10 +19,9 @@
 		<a href="#contact" class="navbar-link ">Contact</a>
 		</div>
 	</nav>
- 	<div class="main">
  		<h1>Alex Wildman</h1>
  		<h2>Web Developer</h2>
- 		 <img src="https://media.licdn.com/media/AAEAAQAAAAAAAAjFAAAAJGQwMmJhNWFkLWViYWUtNDY0Mi1hN2E2LWRmYjhlNmQzNTUzNA.jpg" class="self">
+ 		 
  	</div>
  	<div class="work">
  		<h1>Work</h1>
@@ -43,6 +45,12 @@
  				<p>Coming Soon</p>
  			</div>
  		</div>
+ 	</div>
+ 	<div class="about-me">
+ 		<h1>About Me</h1>
+ 		<p>Bacon ipsum dolor amet rump beef ribs ham, salami ribeye biltong boudin alcatra tongue shank pig kielbasa. Leberkas pastrami burgdoggen bresaola pancetta t-bone ball tip salami ham beef short loin pork loin. Capicola pork belly rump shank. Shankle venison ham hock porchetta capicola. Pork pork belly kielbasa pancetta burgdoggen, bresaola fatback tail picanha.</p>
+ 		<p>Pig bacon burgdoggen biltong spare ribs short loin pancetta chicken. Kielbasa ham hock pancetta, alcatra bresaola turkey short ribs ground round. Picanha hamburger kevin, frankfurter rump short ribs boudin alcatra venison salami cow shankle flank ribeye meatball. Ground round ham meatloaf picanha pork loin corned beef pancetta. Sirloin turducken alcatra porchetta. Drumstick bacon venison turkey, biltong ham filet mignon kielbasa kevin meatloaf tenderloin.</p>
+ 		<img src="https://media.licdn.com/media/AAEAAQAAAAAAAAjFAAAAJGQwMmJhNWFkLWViYWUtNDY0Mi1hN2E2LWRmYjhlNmQzNTUzNA.jpg" class="self">
  	</div>
  	<footer>
  		<div class="socials">
