--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	 
 	  	<!-- Bootstrap Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light ">
+	<nav class="navbar navbar-expand-lg navbar-light">
 		<a class="navbar-brand" href="#">AW</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="	false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -33,56 +33,65 @@
 		</div>
 	</nav>
 <!--end of Bootstrap Navbar -->
+<div class="intro">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 main-bleed">
- 				<h1>Alex Wildman</h1>
- 				<h2>Web Developer</h2>
- 			</div>
- 		</div>
- 	</div>
-
-
-
-
-
-
-
-
+			<div class="col-sm-12 col-md-6">
+				<h1>Alex Wildman</h1>
+	 				<h2>Web Developer</h2>
+	 				<img src="https://media.licdn.com/media/AAEAAQAAAAAAAAjFAAAAJGQwMmJhNWFkLWViYWUtNDY0Mi1hN2E2LWRmYjhlNmQzNTUzNA.jpg" class="img-thumbnail">
+			 </div>
+			 <div class="col-sm-12 col-md-6">
+				<div class="placeholder"><img src="https://images.pexels.com/photos/52608/pexels-photo-52608.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" class="img-fluid"><br>There will eventually be a cool animation or image here but until then here is the stereotypical picture of a frustrated dev</div>
+			 </div>
+		</div>
+	</div>
+</div>
 
  	<div class="work">
  		<h1>Work</h1>
- 		<div class="col-md-4">
- 			<div class="project">
- 				<p>Coming Soon</p>
- 			</div>
- 		</div>
- 		<div class="col-md-4">
- 			<div class="project">
- 				<p>Coming Soon</p>
- 			</div>
- 		</div>
- 		<div class="col-md-4">
- 			<div class="project">
- 				<p>Coming Soon</p>
- 			</div>
- 		</div>
- 		<div class="col-md-4">
- 			<div class="project">
- 				<p>Coming Soon</p>
- 			</div>
+ 		<div class="container">
+ 			<div class="row">
+	 			<div class="col-sm-12 col-md-6 col-lg-3">
+	 				<div class="project">
+	 					<p>Coming Soon</p>
+	 				</div>
+	 			</div>
+	 			<div class="col-sm-12 col-md-6 col-lg-3">
+	 				<div class="project">
+	 					<p>Coming Soon</p>
+	 				</div>
+	 			</div>
+	 			<div class="col-sm-12 col-md-6 col-lg-3">
+	 				<div class="project">
+	 					<p>Coming Soon</p>
+	 				</div>
+	 			</div>
+	 			<div class="col-sm-12 col-md-6 col-lg-3">
+	 				<div class="project">
+	 					<p>Coming Soon</p>
+	 				</div>
+	 			</div>
+	 		</div>
  		</div>
  	</div>
- 	<div class="about-me">
- 		<h1>About Me</h1>
- 		<p>Bacon ipsum dolor amet rump beef ribs ham, salami ribeye biltong boudin alcatra tongue shank pig kielbasa. Leberkas pastrami burgdoggen bresaola pancetta t-bone ball tip salami ham beef short loin pork loin. Capicola pork belly rump shank. Shankle venison ham hock porchetta capicola. Pork pork belly kielbasa pancetta burgdoggen, bresaola fatback tail picanha.</p>
- 		<p>Pig bacon burgdoggen biltong spare ribs short loin pancetta chicken. Kielbasa ham hock pancetta, alcatra bresaola turkey short ribs ground round. Picanha hamburger kevin, frankfurter rump short ribs boudin alcatra venison salami cow shankle flank ribeye meatball. Ground round ham meatloaf picanha pork loin corned beef pancetta. Sirloin turducken alcatra porchetta. Drumstick bacon venison turkey, biltong ham filet mignon kielbasa kevin meatloaf tenderloin.</p>
- 		<img src="https://media.licdn.com/media/AAEAAQAAAAAAAAjFAAAAJGQwMmJhNWFkLWViYWUtNDY0Mi1hN2E2LWRmYjhlNmQzNTUzNA.jpg" class="self">
- 	</div>
- 		<div class="socials">
- 			<a href="https://www.linkedin.com/in/alex-wildman-7b15b880" target="_blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
- 			<a href="https://github.com/wildmanalex" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i>
- 		</div>
+
+<div class="contact">
+	<div class="contact-p">
+		<p>
+		  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+		    Contact
+		  </button>
+		</p>
+		<div class="collapse" id="collapseExample">
+		  <div class="card card-body">
+		   <a href="https://www.linkedin.com/in/alex-wildman-7b15b880" target="_blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
+		   <a href="https://github.com/wildmanalex" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+		  </div>
+		</div>
+	</div>
+</div>
+ 		
  	<!---Bootstrap-->
  	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
