--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
  	<div class="work">
  		<h1>Work</h1>
- 		<div class="container">
+ 		<div class="container-fluid">
  			<div class="row">
 	 			<div class="col-sm-12 col-md-6 col-lg-3">
 	 				<div class="project">
