added black and white image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div class="col-sm-12 col-md-6">
 				<h1>Alex Wildman</h1>
 	 				<h2>Web Developer</h2>
-	 				<img src="https://media.licdn.com/media/AAEAAQAAAAAAAAjFAAAAJGQwMmJhNWFkLWViYWUtNDY0Mi1hN2E2LWRmYjhlNmQzNTUzNA.jpg" class="img-thumbnail">
+	 				<img src="link-img.jpg" class="img-thumbnail">
 			 </div>
 			 <div class="col-sm-12 col-md-6">
 				<div class="placeholder"><img src="https://images.pexels.com/photos/52608/pexels-photo-52608.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" class="img-fluid"><br>There will eventually be a cool animation or image here but until then here is the stereotypical picture of a frustrated dev</div>
