--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
 		</p>
 		<div class="collapse" id="collapseExample">
 		  <div class="card card-body">
-		   <a href="https://www.linkedin.com/in/alex-wildman-7b15b880" target="_blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
-		   <a href="https://github.com/wildmanalex" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+		  	<div class="social">
+		  	 	<a href="https://www.linkedin.com/in/alex-wildman-7b15b880" target="_blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
+		   		<a href="https://github.com/wildmanalex" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+		   	</div>
 		  </div>
 		</div>
 	</div>
