added to the work page

--- a/work.html
+++ b/work.html
@@ -9,7 +9,31 @@
 	<title>Work</title>
 </head>
 <body>
+	<!-- bootstrap navbar   -->
+	<nav class="navbar navbar-expand-lg navbar-light">
+		<a class="navbar-brand" href="#">AW</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="	false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Work</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="#">About</a>
+				</li>
+			</ul>
+			</form>
+		</div>
+	</nav>
+	<!-- end of navbar -->
+
 	<div class="container">
+		<h1>Work</h1>
 		<div class="row">
 			<div class="col-md-12">
 				<div class="calc">
@@ -26,19 +50,30 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<div class="calc">
-					<img src="calc.jpg">
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12">
-				<div class="calc">
-					<img src="calc.jpg">
+				<div class="to-do">
+					<img src="to-do.jpg">
 				</div>
 			</div>
 		</div>
 	</div>
+	<!--contact collapse bar -->
+	<div class="contact">
+	<div class="contact-p">
+		<p>
+		  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+		    Contact
+		  </button>
+		</p>
+		<div class="collapse" id="collapseExample">
+		  <div class="card card-body">
+		  	<div class="social">
+		  	 	<a href="https://www.linkedin.com/in/alex-wildman-7b15b880" target="_blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
+		   		<a href="https://github.com/wildmanalex" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+		   	</div>
+		  </div>
+		</div>
+	</div>
+</div>
 	<!---Bootstrap-->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
