improved main page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Work</a>
+					<a class="nav-link" href="work.html">Work</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link " href="#">About</a>
@@ -33,48 +33,27 @@
 		</div>
 	</nav>
 <!--end of Bootstrap Navbar -->
+
+<!-- main content area -->
 <div class="intro">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 col-md-6">
+			<div class="col-sm-12 col-md-9">
 				<h1>Alex Wildman</h1>
-	 				<h2>Web Developer</h2>
-	 				<img src="link-img.jpg" class="img-thumbnail">
+	 			<h2>Web Developer</h2>
+	 			<img src="link-img.jpg" class="img-thumbnail">
 			 </div>
-			 <div class="col-sm-12 col-md-6">
-				<div class="placeholder"><img src="https://images.pexels.com/photos/52608/pexels-photo-52608.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb" class="img-fluid"><br>There will eventually be a cool animation or image here but until then here is the stereotypical picture of a frustrated dev</div>
+			 <div class="col-sm-12 col-md-3">
+				<div class="skills">
+					<!--<i class="fa fa-html5" aria-hidden="true"></i>
+					<i class="fa fa-css3" aria-hidden="true"></i>-->
+
+				</div>
 			 </div>
 		</div>
 	</div>
 </div>
 
- 	<div class="work">
- 		<h1>Work</h1>
- 		<div class="container-fluid">
- 			<div class="row">
-	 			<div class="col-sm-12 col-md-6 col-lg-3">
-	 				<div class="project">
-	 					<p>Coming Soon</p>
-	 				</div>
-	 			</div>
-	 			<div class="col-sm-12 col-md-6 col-lg-3">
-	 				<div class="project">
-	 					<p>Coming Soon</p>
-	 				</div>
-	 			</div>
-	 			<div class="col-sm-12 col-md-6 col-lg-3">
-	 				<div class="project">
-	 					<p>Coming Soon</p>
-	 				</div>
-	 			</div>
-	 			<div class="col-sm-12 col-md-6 col-lg-3">
-	 				<div class="project">
-	 					<p>Coming Soon</p>
-	 				</div>
-	 			</div>
-	 		</div>
- 		</div>
- 	</div>
 <!-- contact collapse bar -->
 <div class="contact">
 	<div class="contact-p">
