--- a/work.html
+++ b/work.html
@@ -37,6 +37,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="calc">
+					<h2>Retro Calculator</h2>
 					<img src="calc.jpg">
 				</div>
 			</div>
@@ -44,6 +45,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="rock-paper-scissors">
+					<h2>Rock Paper Scissors Game</h2>
 					<img src="rps.jpg">
 				</div>
 			</div>
@@ -51,6 +53,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="to-do">
+					<h2>To Do List</h2>
 					<img src="to-do.jpg">
 				</div>
 			</div>
