added background gradient, added responsiveness

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="https://use.fontawesome.com/8f5e0c9388.js"></script> 
 	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+	<meta name="viewport" content="width=device-width">
 
 
 	<title>Portfolio Page</title>
@@ -41,13 +42,15 @@
 			<div class="col-sm-12 col-md-9">
 				<h1>Alex Wildman</h1>
 	 			<h2>Web Developer</h2>
-	 			<img src="link-img.jpg" class="img-thumbnail">
+	 			<img src="link-img.jpg" class="img-thumbnail img-fluid">
 			 </div>
 			 <div class="col-sm-12 col-md-3">
 				<div class="skills">
 					<!--<i class="fa fa-html5" aria-hidden="true"></i>
 					<i class="fa fa-css3" aria-hidden="true"></i>-->
-
+					<!-- testing out the css loader -->
+					
+					<!--  end of test -->
 				</div>
 			 </div>
 		</div>
