--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="work.css">
 		<script src="https://use.fontawesome.com/8f5e0c9388.js"></script> 
 		<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+		<meta name="viewport" content="width=device-width">
 
 <head>
 	<title>Work</title>
@@ -18,7 +19,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Work</a>
@@ -32,13 +33,14 @@
 	</nav>
 	<!-- end of navbar -->
 
-	<div class="container">
+	<div class="container projects">
 		<h1>Work</h1>
 		<div class="row">
 			<div class="col-md-12">
 				<div class="calc">
 					<h2>Retro Calculator</h2>
-					<img src="calc.jpg">
+					<img src="calc.jpg" class="img-fluid">
+					<a href="https://github.com/wildmanalex" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</div>
@@ -46,7 +48,8 @@
 			<div class="col-md-12">
 				<div class="rock-paper-scissors">
 					<h2>Rock Paper Scissors Game</h2>
-					<img src="rps.jpg">
+					<img src="rps.jpg" class="img-fluid">
+					<a href="https://github.com/wildmanalex" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</div>
@@ -54,7 +57,8 @@
 			<div class="col-md-12">
 				<div class="to-do">
 					<h2>To Do List</h2>
-					<img src="to-do.jpg">
+					<img src="to-do.jpg" class="img-fluid">
+					<a href="https://github.com/wildmanalex" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</div>
