--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
 				<div class="calc">
 					<h2>Retro Calculator</h2>
 					<img src="calc.jpg" class="img-fluid">
-					<a href="https://github.com/wildmanalex" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+					<a href="https://github.com/wildmanalex/calculator" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</div>
@@ -49,7 +49,7 @@
 				<div class="rock-paper-scissors">
 					<h2>Rock Paper Scissors Game</h2>
 					<img src="rps.jpg" class="img-fluid">
-					<a href="https://github.com/wildmanalex" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+					<a href="https://github.com/wildmanalex/RockPaperScissors" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</div>
@@ -58,7 +58,7 @@
 				<div class="to-do">
 					<h2>To Do List</h2>
 					<img src="to-do.jpg" class="img-fluid">
-					<a href="https://github.com/wildmanalex" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+					<a href="https://github.com/wildmanalex/to-to-list" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</div>
